make the test pass to have a good base to build multithreading support
darcs-hash:20070624100704-2fc9d-c662173b103fd35119339bd4b9cf5b398dab6b0e.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,5 +83,5 @@ ENDIF(BUILD_TESTING)
 
 ADD_TEST(Test ${TEST_COMMAND}
    check ${INPUT_IMAGE} out.png orig.png
-   --compare out.png orig.png
+   --compare out.png ${CMAKE_SOURCE_DIR}/images/test.png
 )
