add a thread perf prog
darcs-hash:20070625135910-2fc9d-c0011cf6dc2f6e32f45415ffb126093b7a82ca37.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ ENDIF(BUILD_WRAPPERS)
 
 IF(BUILD_TESTING)
 
-FOREACH(CurrentExe "check" "perf2D")
+FOREACH(CurrentExe check perf2D perf_threads)
   ADD_EXECUTABLE(${CurrentExe} ${CurrentExe}.cxx)
   TARGET_LINK_LIBRARIES(${CurrentExe} ${Libraries})
 ENDFOREACH(CurrentExe)
