add sigma filter - a test is still missing
darcs-hash:20070628103023-2fc9d-fd881259703ac3509863058b153c8a0fa7837cef.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ ENDIF(BUILD_WRAPPERS)
 
 IF(BUILD_TESTING)
 
-FOREACH(CurrentExe check check3D perf2D perf3D perf_threads)
+FOREACH(CurrentExe check check3D perf2D perf3D perf_threads check_sigma)
   ADD_EXECUTABLE(${CurrentExe} ${CurrentExe}.cxx)
   TARGET_LINK_LIBRARIES(${CurrentExe} ${Libraries})
 ENDFOREACH(CurrentExe)
